# mnist-serving

./: .gitattributes  .gitignore  README.md  service.proto
.devcontainer/: devcontainer.json
backend/: CMakeLists.txt  Dockerfile  readme.md
backend/src/: main.cc  main.cpp  service.grpc.pb.cc  service.grpc.pb.h  service.pb.cc  service.pb.h
frontend/: Dockerfile  go.mod  go.sum  main.go
frontend/routing/: service.pb.go  service_grpc.pb.go
model/: mnist.py  model_check.py  requirements.txt
